@@ -1,10 +1,10 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 50calc-gentoo.el 838 RMD160 34e9e0ef6be937eb446fe60a9dd154512925c184 SHA1 ef34d664c706ce057c16e13ee6a58b3acdc8e43d SHA256 af9421de7a52ee54d5643a16d2391bc7b870c19f5845eb05b439e3142fa0ea90
-MD5 aed87816cba8039ddb67c700227a60dd files/50calc-gentoo.el 838
-RMD160 34e9e0ef6be937eb446fe60a9dd154512925c184 files/50calc-gentoo.el 838
-SHA256 af9421de7a52ee54d5643a16d2391bc7b870c19f5845eb05b439e3142fa0ea90 files/50calc-gentoo.el 838
+AUX 50calc-gentoo.el 941 RMD160 0d5aeaea22d9c8b2f72a4ca34c4819a35d466afd SHA1 db743d8e94c1d1a6a5719a8bb052e09c6c41a382 SHA256 484f556390fe0fce6e18bb86fcd54f19685673a08d916e40e5d7a336380a4150
+MD5 17e2ebb40b405e173155f9c265a3b644 files/50calc-gentoo.el 941
+RMD160 0d5aeaea22d9c8b2f72a4ca34c4819a35d466afd files/50calc-gentoo.el 941
+SHA256 484f556390fe0fce6e18bb86fcd54f19685673a08d916e40e5d7a336380a4150 files/50calc-gentoo.el 941
 AUX calc-2.02f-emacs-21.patch 8642 RMD160 1915e1f5f571b92d9cc67ced09085b7a862155e5 SHA1 50c38fbbfa3112bded1ace696fcce942dfdc7d90 SHA256 9c5fd5b410a43c0586a46b69c8f81e4f1ee372291bf76e9c37067bd6f4b68b59
 MD5 f057e004f138025d5560c0f71b379e79 files/calc-2.02f-emacs-21.patch 8642
 RMD160 1915e1f5f571b92d9cc67ced09085b7a862155e5 files/calc-2.02f-emacs-21.patch 8642
@@ -14,14 +14,14 @@ MD5 74b73dc3b5dffde70424a19d6f477a83 files/calc-2.02f-info-dir.patch 301
 RMD160 56a619a319f036ccbbc5fc8f21a8380b807cf68e files/calc-2.02f-info-dir.patch 301
 SHA256 cac6ee1a91324f2001c1d991bb7b9bba24ae6eae36ee554fbbc9e252fdbabbaf files/calc-2.02f-info-dir.patch 301
 DIST calc-2.02f.tar.gz 831865 RMD160 4ca65723de4a5c3f8ebb3c61191185b48ddb1009 SHA1 1a1d54fb90725aacaf1c9308a94be4b813ac4880 SHA256 774231cdf06999d3a7cbfae69a1afe469497a6bc7d2e6cb90de922dd3ae5e67d
-EBUILD calc-2.02f.ebuild 828 RMD160 7500e7a5aea3cfd34519313e4a86b3d8ed9dea72 SHA1 7a2766a8e7d6f7bdcca7b8e2626709fab2ce1c39 SHA256 64e78487ccd34b772458829c9feaece3305dd9e658f87d88bd540d7decb3df83
-MD5 34634683a7a8dd533fbc14ed13ac6d14 calc-2.02f.ebuild 828
-RMD160 7500e7a5aea3cfd34519313e4a86b3d8ed9dea72 calc-2.02f.ebuild 828
-SHA256 64e78487ccd34b772458829c9feaece3305dd9e658f87d88bd540d7decb3df83 calc-2.02f.ebuild 828
-MISC ChangeLog 718 RMD160 3a96bf5c30751c8ee7f49f717e8091e34d5784bc SHA1 1430bea0fb127e001ecca80163de19cdcf1a24cd SHA256 257fc88579652e0df12b708c664b4a8c50d04a081adf3ad4e934a4b4d77ab5aa
-MD5 3c78e7fcf29907aae978c8e8c92de198 ChangeLog 718
-RMD160 3a96bf5c30751c8ee7f49f717e8091e34d5784bc ChangeLog 718
-SHA256 257fc88579652e0df12b708c664b4a8c50d04a081adf3ad4e934a4b4d77ab5aa ChangeLog 718
+EBUILD calc-2.02f.ebuild 1329 RMD160 5a5d3680fb7653e75bb0dd98693c02970b4d0348 SHA1 f3287176fcc7745759175fe7f462f52ad06911e8 SHA256 65571fdad8ce8a69bce7e959a412c726fce3a21f56ade593404f9ed0e0b2de56
+MD5 2d9f7cdd0d7801bb796d50207fc4d268 calc-2.02f.ebuild 1329
+RMD160 5a5d3680fb7653e75bb0dd98693c02970b4d0348 calc-2.02f.ebuild 1329
+SHA256 65571fdad8ce8a69bce7e959a412c726fce3a21f56ade593404f9ed0e0b2de56 calc-2.02f.ebuild 1329
+MISC ChangeLog 1047 RMD160 39ac3e8a478fa026003135339ff737b547a0def5 SHA1 c6898cbfde25325ad564b0aa13dd62932aa6e942 SHA256 5020f1f8ef40ac29878f89200efab9a5e0af24fa3e46ba2efeee505e483e2738
+MD5 60a348e89c6a8fd3dc614411d25245b5 ChangeLog 1047
+RMD160 39ac3e8a478fa026003135339ff737b547a0def5 ChangeLog 1047
+SHA256 5020f1f8ef40ac29878f89200efab9a5e0af24fa3e46ba2efeee505e483e2738 ChangeLog 1047
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -32,7 +32,7 @@ SHA256 35229710c01ffb4714853ed35d29eed785f41c37f1c413cf753ddbcba864b505 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGjCJJNQqtfCuFneMRAhudAJ0eNZ/5rGjP0cItC3QemkY5wL3UYwCfVNaa
-rX7Z4ua9cqFSC8ImZ6XffnQ=
-=Dbtk
+iD8DBQFHIvWjOeoy/oIi7uwRAvZRAJ9GlRNM7C1C3WF9NTQMb3Ec7Ctu0gCdF3/M
+MhN2CUSB95NXv9ad4Er201M=
+=k2ak
 -----END PGP SIGNATURE-----
