@@ -1,6 +1,14 @@
 # ChangeLog for app-emacs/calc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.3 2007/07/04 22:42:11 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.4 2007/10/27 08:23:40 ulm Exp $
+
+  27 Oct 2007; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
+  amd64 stable, bug 197184
+
+  27 Oct 2007; Ulrich Mueller <ulm@gentoo.org> files/50calc-gentoo.el,
+  calc-2.02f.ebuild:
+  Deactivate calc for Emacs 22 where it is already included. Output a
+  corresponding message in pkg_postinst. Add die commands in src_install.
 
   04 Jul 2007; Christian Faulhammer <opfer@gentoo.org> calc-2.02f.ebuild:
   added some quotes; added die comment
